cannot find __decorate

--- a/twitter-sentiment/package.json
+++ b/twitter-sentiment/package.json
@@ -25,6 +25,7 @@
     "@types/meteor": "^1.4.15",
     "@types/meteor-accounts-phone": "0.0.5",
     "@types/underscore": "^1.8.8",
-    "meteor-typings": "^1.4.1"
+    "meteor-typings": "^1.4.1",
+    "typescript": "^2.9.1"
   }
 }
