--- a/twitter-sentiment/tsconfig.json
+++ b/twitter-sentiment/tsconfig.json
@@ -4,6 +4,7 @@
 	  "baseUrl": ".",
 	  "declaration": false,
 	  "emitDecoratorMetadata": true,
+	  "importHelpers": true,
 	  "experimentalDecorators": true,
 	  "lib": [
 		"dom",
@@ -16,15 +17,14 @@
 	  "skipLibCheck": true,
 	  "stripInternal": true,
 	  "noImplicitAny": false,
-	  "types": [
-		"meteor-typings",
-		"@types/underscore"
+	  "typeRoots": [
+		"node_modules/@types"
 	  ]
 	},
 	"include": [
+	  "imports/**/*.ts",
 	  "client/**/*.ts",
-	  "server/**/*.ts",
-	  "imports/**/*.ts"
+	  "server/**/*.ts"
 	],
 	"exclude": [
 	  "node_modules"
