--- a/twitter-sentiment/package.json
+++ b/twitter-sentiment/package.json
@@ -5,16 +5,20 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "@angular/animations": "^6.0.4",
+    "@angular/cdk": "^6.2.1",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
     "@angular/compiler-cli": "^6.0.3",
     "@angular/core": "^6.0.3",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
+    "@angular/material": "^6.2.1",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/platform-server": "^6.0.3",
     "@babel/runtime": "^7.0.0-beta.42",
+    "hammerjs": "^2.0.8",
     "meteor-node-stubs": "^0.3.2",
     "meteor-rxjs": "^0.4.13",
     "reflect-metadata": "^0.1.12",
