set up config.json

--- a/twitter-sentiment/package.json
+++ b/twitter-sentiment/package.json
@@ -2,7 +2,7 @@
   "name": "twitter-sentiment",
   "private": true,
   "scripts": {
-    "start": "meteor run"
+    "start": "meteor run --settings config.json"
   },
   "dependencies": {
     "@angular/animations": "^6.0.4",
