--- a/twitter-sentiment/package.json
+++ b/twitter-sentiment/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/platform-server": "^6.0.3",
     "@babel/runtime": "^7.0.0-beta.42",
+    "@google-cloud/language": "^1.2.0",
     "hammerjs": "^2.0.8",
     "meteor-node-stubs": "^0.3.2",
     "meteor-rxjs": "^0.4.13",
