--- a/twitter-sentiment/package.json
+++ b/twitter-sentiment/package.json
@@ -17,6 +17,7 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/platform-server": "^6.0.3",
+    "@angular/router": "^6.0.5",
     "@babel/runtime": "^7.0.0-beta.42",
     "@google-cloud/language": "^1.2.0",
     "hammerjs": "^2.0.8",
